trying to fix footer covering content issue

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -117,18 +117,8 @@ footer {
   bottom: 0;
   width: 100%;
   padding-top: 1em;
-  margin-top: 1em;
+  margin-top: 3em;
 }
-
-//------------------ Home Page -------------------//
-
-.jumbotron {
-//  padding-left: 10em;
-  background-color: #f2f2f2;
-}
-
-
-
 
 
 .footer-text {
@@ -136,3 +126,6 @@ footer {
   color: #000;
   margin-top: 1em;
 }
+
+
+
